# ilastik-napari

./: .editorconfig  .gitignore  LICENSE  README.md  README.rst  environment.yml  meta.yaml  noxfile.py  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: build-upload.yaml
conda-recipe/: meta.yaml
examples/: simple_labeling.py
src/ilastik/napari/: __init__.py  filters.py  plugin.py  plugin.toml
src/napari_ilastik/: __init__.py  classifier.py  gui.py  napari.toml  plugin.py
