[build-system]
requires = ["setuptools>=61", "setuptools-scm>=6.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-ilastik"
description = "ilastik plugin for napari"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Emil Melnikov", email = "emilmelnikov@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Framework :: napari",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "importlib-metadata",
    "napari[all]",
    "numpy",
    "qtpy",
    "scikit-learn",
    "sparse",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ilastik/napari-ilastik"

[project.entry-points."napari.manifest"]
napari-ilastik = "napari_ilastik:napari.toml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.setuptools_scm]
