[metadata]
name = napari-ilastik
author = The ilastik team
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Framework :: napari
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT
license_file = LICENSE
description = ilastik plugin for napari
long_description = file: README.rst

[options]
install_requires =
    importlib-metadata
    napari[all]
    napari-plugin-engine
    numpy
    qtpy
    scikit-learn
    sparse
python_requires = ~= 3.7
package_dir =
    = src
packages = find:

[options.extras_require]
dev =
    black
    invoke
    ipython
    isort
test =
    pytest

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-ilastik = napari_ilastik.plugin
